--- a/Final_ACH_Reject_App/requirements.txt
+++ b/Final_ACH_Reject_App/requirements.txt
@@ -1,7 +1,8 @@
 numpy==1.25.2
 pandas==2.1.0
-streamlit==1.26.0
+streamlit
 XlsxWriter==3.1.2
 seaborn
 datetime==5.2
 openpyxl==3.1.2
+streamlit-authenticator==0.2.3
